env/config/proxy/x-monitor-envoy-lds.yaml
resources:
- "@type": type.googleapis.com/envoy.config.listener.v3.Listener
  name: listener_0
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 31078
  filter_chains:
  - filters:
    - name: envoy.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        stat_prefix: ingress_http
        http_filters:
        - name: envoy.router
        route_config:
          name: local_route
          virtual_hosts:
          - name: local_service
            domains:
            - "*"
            routes:
            - match:
                 prefix: "/x-monitor/metrics"
              route:
                prefix_rewrite: "/metrics"
                cluster: collector_x-monitor_cluster
            #- match:
            #     prefix: "/plugin/ebpf"
            #  route:
            #    prefix_rewrite: "/"
            #    cluster: plugin_collector_ebpf_cluster
            #- match:
            #    prefix: "/plugin/cgroup"
            #  route:
            #    prefix_rewrite: "/"
            #    cluster: plugin_collector_cgroup_cluster
            #- match:
            #    prefix: "/plugin/x-monitor"
            #  route:
            #    prefix_rewrite: "/"
            #    cluster: plugin_collector_xmonitor_cluster
